tests/sem/pass/array_assign.c
int kiwami_arms[4234];

void main() {
	kiwami_arms[0] = 12312;
}
