tests/sem/error/assign_left.c
void vla(){}

void main() {
	int* a;
	(char*)a = via();
	a + 1 = 1;
}
